fixed overflow issue

--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -2,6 +2,7 @@
 .projects.innerWrapper {
   margin-top: 1em;
   margin-bottom: 2em;
+  overflow: hidden;
 }
 
 .projectList,
